--- a/assets/styles/partials/_sidebar.sass
+++ b/assets/styles/partials/_sidebar.sass
@@ -48,8 +48,7 @@
       user-select: none
       width: 80px
       &:hover,
-      &:focus,
-      &.active
+      &:focus
         color: #aaa
   header
     font-family: $serif
